[metadata]
name = streamlit_heroku
version = 0.0.3
author = Daniel Schutz
author_email = danieljschutz@gmail.com
description = Sets up a project to help deploy Streamlit app on Heroku
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielschutz/streamlit_heroku
project_urls =
    Bug Tracker = https://github.com/danielschutz/streamlit_heroku/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
